fixed layout issues on mobile; diabled unfinished  link buttons

--- a/app/globals.css
+++ b/app/globals.css
@@ -19,6 +19,10 @@
     text-underline-position: under;
   }
 
+  ._dynamic-h-full {
+    min-height: 100dvh;
+  }
+
   ._flex-row {
     display: flex;
     flex-flow: row wrap;
